# line-sweep-rs

./: AGENT.md  Cargo.toml  README.md
src/: closest_pair.rs  event.rs  lib.rs  rectangle.rs  segment.rs  status.rs
